--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
     <string name="title_home">Home</string>
     <string name="title_music">Music</string>
     <string name="title_weather">Weather</string>
+    <string name="prev">PREV</string>
+
+    <string name="play">PLAY</string>
+    <string name="pause">PAUSE</string>
+    <string name="stop">STOP</string>
+    <string name="next">NEXT</string>
+
 </resources>
