--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,12 @@
     <string name="title_home">Home</string>
     <string name="title_music">Music</string>
     <string name="title_weather">Weather</string>
+    <string name="title_watch">Watch</string>
     <string name="prev">PREV</string>
-
+    <string name="time">00:00:00</string>
+    <string name="start">start</string>
+    <string name="watch_stop">stop</string>
+    <string name="restart">restart</string>
     <string name="play">PLAY</string>
     <string name="pause">PAUSE</string>
     <string name="stop">STOP</string>
