--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="title_music">Music</string>
     <string name="title_weather">Weather</string>
     <string name="title_watch">Watch</string>
+    <string name="title_game">Game</string>
     <string name="prev">PREV</string>
     <string name="time">00:00:00</string>
     <string name="start">start</string>
@@ -13,5 +14,8 @@
     <string name="pause">PAUSE</string>
     <string name="stop">STOP</string>
     <string name="next">NEXT</string>
+    <string name="reset">Reset</string>
+    <string name="score">Score</string>
+    <string name="a">A*</string>
 
 </resources>
