--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">FinalTest</string>
-    <string name="title_home">Home</string>
+    <string name="title_view">View</string>
     <string name="title_music">Music</string>
     <string name="title_weather">Weather</string>
     <string name="title_watch">Watch</string>
@@ -11,11 +11,25 @@
     <string name="watch_stop">stop</string>
     <string name="restart">restart</string>
     <string name="play">PLAY</string>
+    <string name="button4">确定</string>
     <string name="pause">PAUSE</string>
     <string name="stop">STOP</string>
     <string name="next">NEXT</string>
     <string name="reset">Reset</string>
     <string name="score">Score</string>
     <string name="a">A*</string>
+    <string name="add">Add</string>
+    <string name="textview">TextView</string>
+    <string name="textview1">TextView</string>
+    <string name="textview2">TextView</string>
+    <string name="textview3">TextView</string>
+    <string name="me"></string>
+    <string name="addTextView">Welcome!</string>
+    <string-array name="list">
+        <item>你好</item>
+        <item>大家好</item>
+        <item>你们好</item>
+        <item>对象好</item>
+    </string-array>
 
 </resources>
